# Roll1ngo-WEBhw_BD_sql

Relation_db/DB/: pyproject.toml
Relation_db/DB/db/: bulk_table.sql  change_to_table.py  create_table.py  create_table.sql  db_connect.py  db_sqlite.sqlite  insert_to_table.py  select_to_table.py  update_pn.py  update_to_table..py
Relation_db/hw/: connect_postgre.py  drop_or_create_table.sql  hw_db.sqlite  seeds.py  select_1.sql  select_10.sql  select_2.sql  select_3.sql  select_4.sql  select_6.sql  select_7.sql  select_8.sql  select_9.sql  selects.py
